hphp/test/zend/bad/ext/zip/tests/bug38943_2.php
<?php
include 'bug38943.inc';
?>
